--- a/src/components/ContactSection/ContactSection.scss
+++ b/src/components/ContactSection/ContactSection.scss
@@ -184,6 +184,7 @@
       display: flex;
       align-items: center;
       justify-content: center;
+      min-height: 300px;
     }
 
     svg {
